--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -53,6 +53,9 @@
         .project-name {
           font-size: 22px;
         }
+        .project-desc {
+          font-size: 12px;
+        }
       }
     }
   }
